<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings">
        <SwitchPreferenceCompat
            app:key="resultCanBeNegative"
            app:singleLineTitle="false"
            app:title="@string/result_can_be_negative" />
        <ListPreference
            app:defaultValue="2"
            app:entries="@array/num_items_entries"
            app:entryValues="@array/num_items_entries"
            app:key="numOfItemInMathProblems"
            app:title="@string/number_of_terms"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="10"
            app:entries="@array/max_item_entries"
            app:entryValues="@array/max_item_entries"
            app:key="maxItem"
            app:title="@string/max_item"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="10"
            app:entries="@array/num_of_examples_entries"
            app:entryValues="@array/num_of_examples_entries"
            app:key="numOfMathProblems"
            app:title="@string/num_of_examples"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>